--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^5.16.6",
@@ -24,7 +25,7 @@
     "gsap": "^3.13.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
